--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,28 +9,71 @@
       "request": "launch",
       "servertype": "openocd",
       "cwd": "${workspaceRoot}",
-      "executable": "${workspaceRoot}\\Build\\${config:project_name}.elf",
+      "executable": "${workspaceRoot}\\build\\${config:project_name}.elf",
+      "postStartSessionCommands": [
+        "set remotetimeout 1200"
+      ],
       "name": "Debug (STLink V2)",
       "device": "STM32F103C8",
       "interface": "swd",
       "configFiles": [
         "${workspaceRoot}\\debug.cfg",
       ],
-      "internalConsoleOptions": "neverOpen",
-      "runToMain": true,
+      "showDevDebugOutput": false,
+      "runToEntryPoint": "main",
       "svdFile": "${workspaceRoot}/STM32F103.svd",
       "preLaunchTask": "Flash to STM32",
+      "graphConfig": [
+        {
+          "label": "ADC Data",
+          "type": "realtime",
+          "annotate": true,
+          "minimum": 0,
+          "maximum": 4096,
+          "plots": [
+            {
+              "graphId": "0",
+              "label": "Potentiometer 0 Data",
+              "color": "#53753c",
+            }
+          ],
+          "timespan": 5
+        },
+        {
+          "label": "Switch State",
+          "type": "realtime",
+          "annotate": false,
+          "minimum": 0,
+          "maximum": 1,
+          "plots": [
+            {
+              "graphId": "1",
+              "label": "SW1 Data",
+              "color": "#53753c",
+            }
+          ],
+          "timespan": 5
+        },
+      ],
       "swoConfig": {
-        "cpuFrequency": 60000000,
+        "cpuFrequency": 72000000,
         "swoFrequency": 2000000,
         "enabled": true,
         "source": "probe",
         "decoders": [
           {
-            "type": "console",
-            "label": "APP",
+            "type": "graph",
             "port": 0,
-            "encoding": "ascii"
+            "encoding": "unsigned",
+            "graphId": "0",
+            "scale": 1,
+          },
+          {
+            "type": "graph",
+            "port": 1,
+            "encoding": "unsigned",
+            "graphId": "1",
+            "scale": 1,
           },
         ]
       }
