--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,8 @@
   "files.associations": {
     "main.h": "c",
     "stm32f1xx_hal.h": "c",
-    "nanoprintf.h": "c"
+    "nanoprintf.h": "c",
+    "stm32f1xx_hal_conf.h": "c"
   },
   "C_Cpp.errorSquiggles": "Disabled"
 }
