--- a/debug.cfg
+++ b/debug.cfg
@@ -4,9 +4,12 @@
 # interfaces. At any time only one interface should be commented out.
 
 # Revision C (newer revision)
-# source [find interface/stlink-v2-1.cfg]
-
-# Revision A and B (older revisions)
 source [find interface/stlink.cfg]
 
+
+# Revision A and B (older revisions)
+# source [find interface/stlink.cfg]
+
 source [find target/stm32f1x.cfg]
+
+adapter speed 4000
